# project2_Nosulchak_Elena_dpo_nod

./: .gitignore  Makefile  db_meta.json  demo.cast  pyproject.toml  readme.md
data/: products.json  users.json
src/: decorators.py
src/primitive_db/: constants.py  core.py  engine.py  main.py  parser.py  utils.py
